# reengineering-labs

lab1/new-version/: CMakeLists.txt  main.cpp
lab1/new-version/pugixml/src/: pugixml.hpp
lab1/old-version/: CMakeLists.txt  main.cpp
lab1/testable/: CMakeLists.txt  main.cpp
